2008-07-28 : caisi integrator uses ssl. (Ted)
2008-07-22 : caisi integrator supports referrals between facilities. (Ted)

---------------------------
Changes prior to 2008-07-17
---------------------------
PMM:

-Home and Logout buttons are now in the top right hand corner

-“Oscar Medical” the link used to bring you back to case management screen has been renamed, the link on the navigator bar is now called “Case Management”

-New Report link: User Created Form Report: This will create a report based on a specific user created form

-Dependencies (spouse, partner, child, sibling, etc.): With the upgrade comes the new feature that allows a provider to link more then one file together. For example, a woman and her 2 children are staying in a shelter; the provider can create separate files for all 3 individuals, but can link them based on their relationship. Follow these steps:
-Program Management Module
-Summary Page for a client
-Second Tab down says “family”
-Click on update and enter in the last name to search for family members/dependents
-Add member to client file

-Health and Safety Message on client PMM Summary: On the summary tab for a client, in the Program Management Module, users can add in a health and safety message simply by clicking on “New Health and Safety”, entering message and pressing save

-Integrator Consent: This consent is in place to indicate the level of information sharing a client would like (ranging from no information shared to all information shared). This will not be in use until the integrator is functional and if Seaton House agrees to participate in integration. 


-Addition of the concept of facilities: A facility is a larger entity that holds together smaller programs. For example, the City of Toronto would be a Facility and the agencies would be the City run shelters. For the purposes of Seaton House, Seaton House will be the Facility.  

